resolved most promise antipatterns
