# src/controllers/projectController.ts
@@ -1,5 +1,5 @@
 import { Body, Request, Controller, Delete, Get, Res, Post, Put, Route, TsoaResponse, Path } from 'tsoa'
-import { authenticate } from '../authApi/userFunctions'
+import { authenticate, authorize } from '../authApi/userFunctions'
 import {ICreateProject, IReturnProject} from '../interfaces/projectInterface'
 import * as api from '../projectApi'
 import * as express from 'express'
@@ -13,7 +13,7 @@ export class ProjectController extends Controller {
         @Res() serverErrorResponse: TsoaResponse<500, { reason: string }>
     ): Promise<IReturnProject[]> {
         try {
-            const authReq: IAuthRequest = await authenticate(req)
+            let authReq: IAuthRequest = await authenticate(req)
             const response = await api.getAllProjects(authReq)
 
             this.setStatus(200)
@@ -47,7 +47,8 @@ export class ProjectController extends Controller {
         @Res() serverErrorResponse: TsoaResponse<500, { reason: string }>
     ): Promise<IReturnProject[]> {
         try {
-            const authReq: IAuthRequest = await authenticate(req) 
+            let authReq: IAuthRequest = await authenticate(req)
+            authReq = await authorize(authReq)
             const response = await api.getOneProject(authReq)
             this.setStatus(200)
             return response
@@ -68,6 +69,23 @@ export class ProjectController extends Controller {
             const response = await api.createProject(authReq)
             this.setStatus(201)
             return response
+        } catch (error) {
+            console.error('error', error)
+            serverErrorResponse(500, { reason: error.message })
+        }
+    }
+
+    @Delete('/{projectName}')
+    public async deleteProject(
+        @Request() req: express.Request,
+        @Res() serverErrorResponse: TsoaResponse<500, { reason: string }>
+    ): Promise<void> {
+        try {
+            let authReq: IAuthRequest = await authenticate(req)
+            authReq = await authorize(authReq)
+            await api.deleteProject(authReq)
+            this.setStatus(200)
+            return
         } catch (error) {
             console.error('error', error)
             serverErrorResponse(500, { reason: error.message })
